Fix: BigOrderTableRepositoryTest now passes by resolving log inclusion issues and comparator selection. Reduced boilerplate by consolidating <column/> tags.